@@ -275,7 +275,8 @@ static int xioopen_openssl_connect(
    }
 
    xioinit_ip(&pf, xioparms.default_ip);
-   sfd->howtoend = END_SHUTDOWN;
+   if (sfd->howtoend == END_UNSPEC)
+      sfd->howtoend = END_SHUTDOWN;
    if (applyopts_single(sfd, opts, PH_INIT) < 0)
       return -1;
    applyopts(sfd, -1, opts, PH_INIT);
@@ -592,7 +593,8 @@ static int xioopen_openssl_listen(
 
    portname = argv[1];
 
-   sfd->howtoend = END_SHUTDOWN;
+   if (sfd->howtoend == END_UNSPEC)
+      sfd->howtoend = END_SHUTDOWN;
    if (applyopts_single(sfd, opts, PH_INIT) < 0)  return -1;
    applyopts(sfd, -1, opts, PH_INIT);
 
