@@ -531,7 +531,8 @@ static int xioopen_socks5(
 	target_name = argv[3];
 	target_port = argv[4];
 
-	sfd->howtoend = END_SHUTDOWN;
+	if (sfd->howtoend == END_UNSPEC)
+		sfd->howtoend = END_SHUTDOWN;
 	if (applyopts_single(sfd, opts, PH_INIT) < 0)	return -1;
 	applyopts(sfd, -1, opts, PH_INIT);
 
